@@ -1,4 +1,5 @@
 Development
+	Emulate WMP versionInfo
 	Add in some more WMP javascript emulation
 	Align PlayStateChanges similar to WMP
 	Rework how media events are handled
